index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300;6..12,600;6..12,800&display=swap");

* {
    margin: 0;
    border: 0;
    box-sizing: border-box;
    font-family: "Nunito Sans";
}
:root {
    --bg-color: hsl(0, 0%, 98%);
    --h-bg: hsl(0, 0%, 100%);
    --text: hsl(200, 15%, 8%);
    --input: hsl(0, 0%, 52%);
    --shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
}
/* body {
    background: var(--bg-color);
    width: 100vw;
    min-height: 100vh;
} */
.wrapper {
    position: relative;
    overflow: hidden;
}

/* =========================== */
/*          HEADER              */
/* =========================== */

header {
    padding: 1rem;
    background-color: var(--h-bg);
    box-shadow: var(--shadow);
}
.container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
}
.where {
    font-weight: 800;
    font-size: 1.1rem;
}
.mode {
    display: flex;
    gap: 0.5rem;
    cursor: pointer;
}
.mode-text {
    white-space: nowrap;
    font-weight: 600;
}

/* =========================== */
/*             MAIN            */
/* =========================== */

main {
    min-height: 100vh;
    width: 100%;
    background-color: var(--bg-color);
    padding: 1rem;
}

.filter {
    width: 100%;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 2rem;
    padding-block: 0.5rem;
}

.search {
    display: flex;
    align-items: center;
    gap: 1rem;
    background-color: var(--h-bg);
    box-shadow: var(--shadow);
    padding: 0.7rem;
    border-radius: 0.2rem;
}

.search input {
    outline: none;
    width: min(90vw, 350px);
}

.select {
    background-color: var(--h-bg);
    box-shadow: var(--shadow);
    padding: 0.7rem;
    border-radius: 0.2rem;
    outline: none;
}

.countries {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    justify-content: space-evenly;
}
.country {
    width: 280px;
    height: 320px;
    background-color: var(--h-bg);
    box-shadow: var(--shadow);
    border-radius: 0.5rem;
    margin-top: 2rem;
    transition: transform 200ms ease-in-out;
    cursor: pointer;
}

.country img {
    width: 100%;
    height: 50%;
}
.country:hover {
    transform: translateY(-0.2rem);
}

.country-text {
    padding: 1.5rem 1rem;
}

.country-text > *:first-child {
    color: var(--text);
    margin-bottom: 0.5rem;
}

.country-text > p {
    color: var(--text);
    font-weight: 600;
    margin-bottom: 0.2rem;
}
.country-text p span {
    color: var(--input);
}

/* ======================== */
/*      display detailes    */
/* ======================== */

.details {
    padding: 1.5rem 1rem;
    background-color: var(--bg-color);
    min-height: 90vh;
    display: none;
}
.back {
    padding: 0.5rem 1rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-family: inherit;
    font-weight: 600;
    border-right: none;
    color: var(--text);
    box-shadow: var(--shadow);
    background-color: var(--bg-color);
    cursor: pointer;
}

.info {
    margin-top: 2.5rem;
    max-width: 1200px;
    margin-inline: auto;
}
.info img {
    width: min(90vw, 550px);
    aspect-ratio: calc(450 / 300);
    box-shadow: var(--shadow);
    margin-inline: atuo;
}

.info {
    display: flex;
    gap: 4rem;
    align-items: center;
}
@media screen and (max-width: 900px) {
    .info {
        flex-wrap: wrap;
    }
}

.details-info {
    display: flex;
    flex-direction: column;
}
.details-text {
    display: flex;
    align-items: center;
    gap: 5rem;
    flex-wrap: wrap;
}
@media screen and (max-width: 513px) {
    .details-text {
        gap: 2rem;
    }
}
.borders {
    margin-top: 2.5rem;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    flex-wrap: wrap;
}
.border {
    display: inline-block;
    padding: 0.3rem 1rem;
    margin-right: 1rem;
    margin-top: 1rem;
    background-color: var(--bg-color);
    color: var(--text);
    font-weight: 300;
    box-shadow: var(--shadow);
    cursor: pointer;
    border-radius: 0.2rem;
}

/* COLOR */
.one > h2 {
    margin-bottom: 1rem;
}
.one > h2,
.borders > h4 {
    color: var(--text);
}
.borders h4 {
    margin-top: 1rem;
}

.one > p,
.two > p {
    color: var(--text);
    font-weight: 600;
}

.one p span,
.two p span {
    color: var(--input);
    font-weight: 300;
}
.mt {
    margin-top: 1rem;
}

